--- a/web/css/src/_partials/nueva-landing/_reviews.scss
+++ b/web/css/src/_partials/nueva-landing/_reviews.scss
@@ -56,7 +56,7 @@
                 font: 600 1.6rem/1 $font;
                 @include min(sm) {
                   @include letter-spacing(2.4);
-                  font-size: 2.4rem;
+                  font-size: 2.1rem;
                 }
               }
             }
@@ -66,7 +66,7 @@
               color: $secondary-light;
               font: 500 1.6rem/1.5 $font;
               @include min(sm) {
-                font-size: 2.1rem;
+                font-size: 1.8rem;
               }
             }
           }
